# rust_newbie

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  setting.json
.github/workflows/: rust.yml
src/: main.rs
src/10 Циклы/10.1 Циклы for 1 часть/: 10.1.10.rs  10.1.3.rs  10.1.4.rs  10.1.6.rs  10.1.7.rs  10.1.9.rs  10_1_2.rs  10_1_5.rs  10_1_8.rs
src/10 Циклы/10.2 Циклы for 2 часть/: 10.2.1.rs  10.2.2.rs  10.2.5.rs  10_2_1.rs  10_2_3.rs
src/10 Циклы/10.3 Перебор коллекций/: 10.3.1.rs  10_3_1.rs  10_3_4.rs
src/10 Циклы/10.4 While/: 10_4_1.rs
src/10 Циклы/10.6 Loop/: 10.6.1.rs  10_6_2.rs
src/12 Функции/12.1 Определение функции/: 12.1.1.rs  12.1.2.rs  12.1.3rs  12.1.4.rs  12_1_1.rs
src/12 Функции/12.2 Параметры функции/: 12.2.1.rs  12.2.3.rs  12_2_2.rs  12_2_3.rs
src/12 Функции/12.3 Возврат значений/: 12.3.2.rs  12.3.4.rs  12.3.5.rs  12_3_1.rs  12_3_3.rs  12_3_6.rs
src/14 Концепции владения/14.1/: 14.1.2.rs  14_1_1.rs
src/14 Концепции владения/14.2/: 14.2.3.rs  14.2.4.rs  14_2_1.rs  14_2_2.rs
src/14 Концепции владения/14.3 Ссылки и заимстваования/: 14_3_1.rs
src/4.2  Вещественные типы/: 4_2_1.rs  4_2_2.rs  4_2_3.rs  4_2_4.rs  4_2_5.rs  4_2_6.rs
src/4.3, 4.4 Логические, символьные типы/: 4_3_1.rs  4_4_1.rs  4_4_2.rs
src/5.1 Кортежи/: 5.1.3.rs  5.1.4.rs  5.1.6.rs  5_1_1.rs  5_1_2.rs  5_1_3.rs  5_1_5.rs
src/5.2 Массивы/: 5.2.2.rs  5.2.4.rs  5.2.6.rs  5.2.7.rs  5_2_1.rs  5_2_3.rs  5_2_5.rs
src/6.1 Задачи, часть 1/: 6.1.1.rs  6.1.11.rs  6.1.4.rs  6.1.5_main_tests.rs  6.1.6.rs  6.1.9.rs  6.2.1.rs  6.2.2.rs  6.2.3.rs  6.2.5.rs  6.2.6.rs  6.2.8.rs  6.2.9.rs  6_1_10.rs  6_1_12.rs  6_1_2.rs  6_1_3.rs  6_1_5.rs  6_1_7.rs  6_1_8.rs  6_2_10.rs  6_2_11.rs  6_2_4.rs  6_2_7.rs
src/7 Условные выражения/7.1 Оператор if/: 7.1.2.rs  7.1.4.rs  7.1.6.rs  7_1_1.rs  7_1_3.rs  7_1_5.rs  7_1_7.rs
src/7 Условные выражения/7.2 Каскад else if/: 7.2.1.rs  7.2.2.rs  7.2.3.rs  7.2.4.rs  7.2.5.rs  7.2.8rs  7_2_5.rs  7_2_6.rs  7_2_7.rs
src/7 Условные выражения/7.3 If в инструкции let/: 7.3.3.rs  7.3.5.rs  7_3_1.rs  7_3_2.rs  7_3_4.rs  7_3_5.rs
src/8 Закрепление условных выражений/8.1 Часть 1/: 8_1_2.rs  8_1_3.rs
src/8 Закрепление условныъ выражений/8.1 Часть 1/: 8.1.1.rs  8.1.2.rs  8.1.4.rs
src/8 Закрепление условныъ выражений/8.2 Часть 2/: 8.2.7.rs
src/9.1 Составные операторы присваивания/: 9_1_1.rs
src/Задачи 2.1/: 2.1.4.rs  2.1.6.rs  2.10.3.rs  2.2.3.rs  2.2.4.rs  2.2.5.rs  2.3.1.rs  2.3.3.rs  2.4.4.rs  2.7.2 .rs  2.8.1.rs  2.8.2.rs  2_10_4.rs  2_1_2.rs  2_1_5.rs  2_4_3.rs  2_5_1.rs  2_5_3.rs  2_7_3.rs  2_8_3.rs
src/Задачи/1.1 - 1.10 уровень/: 1.10.5.rs  1.4.3.rs  1.4.6.rs  1.4.7.rs  1.5.3.rs  1.6.3.rs  1.7.4.rs  1.7.5.rs  1.8.2.rs  1_10_3.rs  1_4_4.rs  1_4_5.rs  1_5_2.rs  1_5_5.rs  1_5_7.rs  1_9_5.rs
tests/: main_tests.rs
