[package]
name = "RustProgramm"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
assert_cmd = "2.0"

[[bin]]
name = "10_Циклы_10_1_Циклы_for_1_часть_10_1_1"
path = "src/10 Циклы/10.1 Циклы for 1 часть/10_1_1.rs"

[[bin]]
name = "10_Циклы_10_1_Циклы_for_1_часть_10_1_10"
path = "src/10 Циклы/10.1 Циклы for 1 часть/10_1_10.rs"

[[bin]]
name = "10_Циклы_10_1_Циклы_for_1_часть_10_1_2"
path = "src/10 Циклы/10.1 Циклы for 1 часть/10_1_2.rs"

[[bin]]
name = "10_Циклы_10_1_Циклы_for_1_часть_10_1_3"
path = "src/10 Циклы/10.1 Циклы for 1 часть/10_1_3.rs"

[[bin]]
name = "10_Циклы_10_1_Циклы_for_1_часть_10_1_4"
path = "src/10 Циклы/10.1 Циклы for 1 часть/10_1_4.rs"

[[bin]]
name = "10_Циклы_10_1_Циклы_for_1_часть_10_1_5"
path = "src/10 Циклы/10.1 Циклы for 1 часть/10_1_5.rs"

[[bin]]
name = "10_Циклы_10_1_Циклы_for_1_часть_10_1_6"
path = "src/10 Циклы/10.1 Циклы for 1 часть/10_1_6.rs"

[[bin]]
name = "10_Циклы_10_1_Циклы_for_1_часть_10_1_7"
path = "src/10 Циклы/10.1 Циклы for 1 часть/10_1_7.rs"

[[bin]]
name = "10_Циклы_10_1_Циклы_for_1_часть_10_1_8"
path = "src/10 Циклы/10.1 Циклы for 1 часть/10_1_8.rs"

[[bin]]
name = "10_Циклы_10_1_Циклы_for_1_часть_10_1_9"
path = "src/10 Циклы/10.1 Циклы for 1 часть/10_1_9.rs"

[[bin]]
name = "10_Циклы_10_2_Циклы_for_2_часть_10_2_1"
path = "src/10 Циклы/10.2 Циклы for 2 часть/10_2_1.rs"

[[bin]]
name = "10_Циклы_10_2_Циклы_for_2_часть_10_2_2"
path = "src/10 Циклы/10.2 Циклы for 2 часть/10_2_2.rs"

[[bin]]
name = "10_Циклы_10_2_Циклы_for_2_часть_10_2_3"
path = "src/10 Циклы/10.2 Циклы for 2 часть/10_2_3.rs"

[[bin]]
name = "10_Циклы_10_2_Циклы_for_2_часть_10_2_5"
path = "src/10 Циклы/10.2 Циклы for 2 часть/10_2_5.rs"

[[bin]]
name = "10_Циклы_10_3_Перебор_коллекций_10_3_1"
path = "src/10 Циклы/10.3 Перебор коллекций/10_3_1.rs"

[[bin]]
name = "10_Циклы_10_3_Перебор_коллекций_10_3_4"
path = "src/10 Циклы/10.3 Перебор коллекций/10_3_4.rs"

[[bin]]
name = "10_Циклы_10_4_While_10_4_1"
path = "src/10 Циклы/10.4 While/10_4_1.rs"

[[bin]]
name = "10_Циклы_10_6_Loop_10_6_1"
path = "src/10 Циклы/10.6 Loop/10_6_1.rs"

[[bin]]
name = "10_Циклы_10_6_Loop_10_6_2"
path = "src/10 Циклы/10.6 Loop/10_6_2.rs"

[[bin]]
name = "12_Функции_12_1_Определение_функции_12_1_1"
path = "src/12 Функции/12.1 Определение функции/12_1_1.rs"

[[bin]]
name = "12_Функции_12_1_Определение_функции_12_1_2"
path = "src/12 Функции/12.1 Определение функции/12_1_2.rs"

[[bin]]
name = "12_Функции_12_1_Определение_функции_12_1_4"
path = "src/12 Функции/12.1 Определение функции/12_1_4.rs"

[[bin]]
name = "12_Функции_12_2_Параметры_функции_12_2_1"
path = "src/12 Функции/12.2 Параметры функции/12_2_1.rs"

[[bin]]
name = "12_Функции_12_2_Параметры_функции_12_2_2"
path = "src/12 Функции/12.2 Параметры функции/12_2_2.rs"

[[bin]]
name = "12_Функции_12_2_Параметры_функции_12_2_3"
path = "src/12 Функции/12.2 Параметры функции/12_2_3.rs"

[[bin]]
name = "12_Функции_12_2_Параметры_функции_12_2_4"
path = "src/12 Функции/12.2 Параметры функции/12_2_4.rs"

[[bin]]
name = "12_Функции_12_3_Возврат_значений_12_3_1"
path = "src/12 Функции/12.3 Возврат значений/12_3_1.rs"

[[bin]]
name = "12_Функции_12_3_Возврат_значений_12_3_2"
path = "src/12 Функции/12.3 Возврат значений/12_3_2.rs"

[[bin]]
name = "12_Функции_12_3_Возврат_значений_12_3_3"
path = "src/12 Функции/12.3 Возврат значений/12_3_3.rs"

[[bin]]
name = "12_Функции_12_3_Возврат_значений_12_3_4"
path = "src/12 Функции/12.3 Возврат значений/12_3_4.rs"

[[bin]]
name = "12_Функции_12_3_Возврат_значений_12_3_5"
path = "src/12 Функции/12.3 Возврат значений/12_3_5.rs"

[[bin]]
name = "12_Функции_12_3_Возврат_значений_12_3_6"
path = "src/12 Функции/12.3 Возврат значений/12_3_6.rs"

[[bin]]
name = "14_Концепции_владения_14_1_14_1_1"
path = "src/14 Концепции владения/14.1/14_1_1.rs"

[[bin]]
name = "14_Концепции_владения_14_1_14_1_2"
path = "src/14 Концепции владения/14.1/14_1_2.rs"

[[bin]]
name = "14_Концепции_владения_14_2_14_2_1"
path = "src/14 Концепции владения/14.2/14_2_1.rs"

[[bin]]
name = "14_Концепции_владения_14_2_14_2_2"
path = "src/14 Концепции владения/14.2/14_2_2.rs"

[[bin]]
name = "14_Концепции_владения_14_2_14_2_3"
path = "src/14 Концепции владения/14.2/14_2_3.rs"

[[bin]]
name = "14_Концепции_владения_14_2_14_2_4"
path = "src/14 Концепции владения/14.2/14_2_4.rs"

[[bin]]
name = "14_Концепции_владения_14_3_Ссылки_и_заимстваования_14_3_1"
path = "src/14 Концепции владения/14.3 Ссылки и заимстваования/14_3_1.rs"

[[bin]]
name = "4_2_Вещественные_типы_4_2_1"
path = "src/4.2  Вещественные типы/4_2_1.rs"

[[bin]]
name = "4_2_Вещественные_типы_4_2_2"
path = "src/4.2  Вещественные типы/4_2_2.rs"

[[bin]]
name = "4_2_Вещественные_типы_4_2_3"
path = "src/4.2  Вещественные типы/4_2_3.rs"

[[bin]]
name = "4_2_Вещественные_типы_4_2_4"
path = "src/4.2  Вещественные типы/4_2_4.rs"

[[bin]]
name = "4_2_Вещественные_типы_4_2_5"
path = "src/4.2  Вещественные типы/4_2_5.rs"

[[bin]]
name = "4_2_Вещественные_типы_4_2_6"
path = "src/4.2  Вещественные типы/4_2_6.rs"

[[bin]]
name = "4_3,_4_4_Логические,_символьные_типы_4_3_1"
path = "src/4.3, 4.4 Логические, символьные типы/4_3_1.rs"

[[bin]]
name = "4_3,_4_4_Логические,_символьные_типы_4_4_1"
path = "src/4.3, 4.4 Логические, символьные типы/4_4_1.rs"

[[bin]]
name = "4_3,_4_4_Логические,_символьные_типы_4_4_2"
path = "src/4.3, 4.4 Логические, символьные типы/4_4_2.rs"

[[bin]]
name = "5_1_Кортежи_5_1_1"
path = "src/5.1 Кортежи/5_1_1.rs"

[[bin]]
name = "5_1_Кортежи_5_1_2"
path = "src/5.1 Кортежи/5_1_2.rs"

[[bin]]
name = "5_1_Кортежи_5_1_3"
path = "src/5.1 Кортежи/5_1_3.rs"

[[bin]]
name = "5_1_Кортежи_5_1_4"
path = "src/5.1 Кортежи/5_1_4.rs"

[[bin]]
name = "5_1_Кортежи_5_1_5"
path = "src/5.1 Кортежи/5_1_5.rs"

[[bin]]
name = "5_1_Кортежи_5_1_6"
path = "src/5.1 Кортежи/5_1_6.rs"

[[bin]]
name = "5_2_Массивы_5_2_1"
path = "src/5.2 Массивы/5_2_1.rs"

[[bin]]
name = "5_2_Массивы_5_2_2"
path = "src/5.2 Массивы/5_2_2.rs"

[[bin]]
name = "5_2_Массивы_5_2_3"
path = "src/5.2 Массивы/5_2_3.rs"

[[bin]]
name = "5_2_Массивы_5_2_4"
path = "src/5.2 Массивы/5_2_4.rs"

[[bin]]
name = "5_2_Массивы_5_2_5"
path = "src/5.2 Массивы/5_2_5.rs"

[[bin]]
name = "5_2_Массивы_5_2_6"
path = "src/5.2 Массивы/5_2_6.rs"

[[bin]]
name = "5_2_Массивы_5_2_7"
path = "src/5.2 Массивы/5_2_7.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_1_1"
path = "src/6.1 Задачи, часть 1/6_1_1.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_1_10"
path = "src/6.1 Задачи, часть 1/6_1_10.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_1_11"
path = "src/6.1 Задачи, часть 1/6_1_11.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_1_12"
path = "src/6.1 Задачи, часть 1/6_1_12.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_1_2"
path = "src/6.1 Задачи, часть 1/6_1_2.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_1_3"
path = "src/6.1 Задачи, часть 1/6_1_3.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_1_4"
path = "src/6.1 Задачи, часть 1/6_1_4.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_1_5"
path = "src/6.1 Задачи, часть 1/6_1_5.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_1_6"
path = "src/6.1 Задачи, часть 1/6_1_6.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_1_7"
path = "src/6.1 Задачи, часть 1/6_1_7.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_1_8"
path = "src/6.1 Задачи, часть 1/6_1_8.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_1_9"
path = "src/6.1 Задачи, часть 1/6_1_9.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_2_1"
path = "src/6.1 Задачи, часть 1/6_2_1.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_2_10"
path = "src/6.1 Задачи, часть 1/6_2_10.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_2_11"
path = "src/6.1 Задачи, часть 1/6_2_11.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_2_2"
path = "src/6.1 Задачи, часть 1/6_2_2.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_2_3"
path = "src/6.1 Задачи, часть 1/6_2_3.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_2_4"
path = "src/6.1 Задачи, часть 1/6_2_4.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_2_5"
path = "src/6.1 Задачи, часть 1/6_2_5.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_2_6"
path = "src/6.1 Задачи, часть 1/6_2_6.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_2_7"
path = "src/6.1 Задачи, часть 1/6_2_7.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_2_8"
path = "src/6.1 Задачи, часть 1/6_2_8.rs"

[[bin]]
name = "6_1_Задачи,_часть_1_6_2_9"
path = "src/6.1 Задачи, часть 1/6_2_9.rs"

[[bin]]
name = "7_Условные_выражения_7_1_Оператор_if_7_1_1"
path = "src/7 Условные выражения/7.1 Оператор if/7_1_1.rs"

[[bin]]
name = "7_Условные_выражения_7_1_Оператор_if_7_1_2"
path = "src/7 Условные выражения/7.1 Оператор if/7_1_2.rs"

[[bin]]
name = "7_Условные_выражения_7_1_Оператор_if_7_1_3"
path = "src/7 Условные выражения/7.1 Оператор if/7_1_3.rs"

[[bin]]
name = "7_Условные_выражения_7_1_Оператор_if_7_1_4"
path = "src/7 Условные выражения/7.1 Оператор if/7_1_4.rs"

[[bin]]
name = "7_Условные_выражения_7_1_Оператор_if_7_1_5"
path = "src/7 Условные выражения/7.1 Оператор if/7_1_5.rs"

[[bin]]
name = "7_Условные_выражения_7_1_Оператор_if_7_1_6"
path = "src/7 Условные выражения/7.1 Оператор if/7_1_6.rs"

[[bin]]
name = "7_Условные_выражения_7_1_Оператор_if_7_1_7"
path = "src/7 Условные выражения/7.1 Оператор if/7_1_7.rs"

[[bin]]
name = "7_Условные_выражения_7_2_Каскад_else_if_7_2_1"
path = "src/7 Условные выражения/7.2 Каскад else if/7_2_1.rs"

[[bin]]
name = "7_Условные_выражения_7_2_Каскад_else_if_7_2_2"
path = "src/7 Условные выражения/7.2 Каскад else if/7_2_2.rs"

[[bin]]
name = "7_Условные_выражения_7_2_Каскад_else_if_7_2_3"
path = "src/7 Условные выражения/7.2 Каскад else if/7_2_3.rs"

[[bin]]
name = "7_Условные_выражения_7_2_Каскад_else_if_7_2_4"
path = "src/7 Условные выражения/7.2 Каскад else if/7_2_4.rs"

[[bin]]
name = "7_Условные_выражения_7_2_Каскад_else_if_7_2_5"
path = "src/7 Условные выражения/7.2 Каскад else if/7_2_5.rs"

[[bin]]
name = "7_Условные_выражения_7_2_Каскад_else_if_7_2_6"
path = "src/7 Условные выражения/7.2 Каскад else if/7_2_6.rs"

[[bin]]
name = "7_Условные_выражения_7_2_Каскад_else_if_7_2_7"
path = "src/7 Условные выражения/7.2 Каскад else if/7_2_7.rs"

[[bin]]
name = "7_Условные_выражения_7_3_If_в_инструкции_let_7_3_1"
path = "src/7 Условные выражения/7.3 If в инструкции let/7_3_1.rs"

[[bin]]
name = "7_Условные_выражения_7_3_If_в_инструкции_let_7_3_2"
path = "src/7 Условные выражения/7.3 If в инструкции let/7_3_2.rs"

[[bin]]
name = "7_Условные_выражения_7_3_If_в_инструкции_let_7_3_3"
path = "src/7 Условные выражения/7.3 If в инструкции let/7_3_3.rs"

[[bin]]
name = "7_Условные_выражения_7_3_If_в_инструкции_let_7_3_4"
path = "src/7 Условные выражения/7.3 If в инструкции let/7_3_4.rs"

[[bin]]
name = "7_Условные_выражения_7_3_If_в_инструкции_let_7_3_5"
path = "src/7 Условные выражения/7.3 If в инструкции let/7_3_5.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_1_Часть_1_8_1_1"
path = "src/8 Закрепление условных выражений/8.1 Часть 1/8_1_1.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_1_Часть_1_8_1_2"
path = "src/8 Закрепление условных выражений/8.1 Часть 1/8_1_2.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_1_Часть_1_8_1_3"
path = "src/8 Закрепление условных выражений/8.1 Часть 1/8_1_3.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_1_Часть_1_8_1_4"
path = "src/8 Закрепление условных выражений/8.1 Часть 1/8_1_4.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_1_Часть_1_8_1_5"
path = "src/8 Закрепление условных выражений/8.1 Часть 1/8_1_5.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_1_Часть_1_8_1_6"
path = "src/8 Закрепление условных выражений/8.1 Часть 1/8_1_6.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_1_Часть_1_8_1_7"
path = "src/8 Закрепление условных выражений/8.1 Часть 1/8_1_7.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_2_Часть_2_8_2_1"
path = "src/8 Закрепление условных выражений/8.2 Часть 2/8_2_1.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_2_Часть_2_8_2_2"
path = "src/8 Закрепление условных выражений/8.2 Часть 2/8_2_2.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_2_Часть_2_8_2_3"
path = "src/8 Закрепление условных выражений/8.2 Часть 2/8_2_3.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_2_Часть_2_8_2_4"
path = "src/8 Закрепление условных выражений/8.2 Часть 2/8_2_4.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_2_Часть_2_8_2_5"
path = "src/8 Закрепление условных выражений/8.2 Часть 2/8_2_5.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_2_Часть_2_8_2_6"
path = "src/8 Закрепление условных выражений/8.2 Часть 2/8_2_6.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_2_Часть_2_8_2_7"
path = "src/8 Закрепление условных выражений/8.2 Часть 2/8_2_7.rs"

[[bin]]
name = "8_Закрепление_условных_выражений_8_2_Часть_2_8_2_8"
path = "src/8 Закрепление условных выражений/8.2 Часть 2/8_2_8.rs"

[[bin]]
name = "9_1_Составные_операторы_присваивания_9_1_1"
path = "src/9.1 Составные операторы присваивания/9_1_1.rs"

[[bin]]
name = "Задачи_2_1_2_10_3"
path = "src/Задачи 2.1/2_10_3.rs"

[[bin]]
name = "Задачи_2_1_2_10_4"
path = "src/Задачи 2.1/2_10_4.rs"

[[bin]]
name = "Задачи_2_1_2_1_2"
path = "src/Задачи 2.1/2_1_2.rs"

[[bin]]
name = "Задачи_2_1_2_1_4"
path = "src/Задачи 2.1/2_1_4.rs"

[[bin]]
name = "Задачи_2_1_2_1_5"
path = "src/Задачи 2.1/2_1_5.rs"

[[bin]]
name = "Задачи_2_1_2_1_6"
path = "src/Задачи 2.1/2_1_6.rs"

[[bin]]
name = "Задачи_2_1_2_2_3"
path = "src/Задачи 2.1/2_2_3.rs"

[[bin]]
name = "Задачи_2_1_2_2_4"
path = "src/Задачи 2.1/2_2_4.rs"

[[bin]]
name = "Задачи_2_1_2_2_5"
path = "src/Задачи 2.1/2_2_5.rs"

[[bin]]
name = "Задачи_2_1_2_3_1"
path = "src/Задачи 2.1/2_3_1.rs"

[[bin]]
name = "Задачи_2_1_2_3_3"
path = "src/Задачи 2.1/2_3_3.rs"

[[bin]]
name = "Задачи_2_1_2_4_3"
path = "src/Задачи 2.1/2_4_3.rs"

[[bin]]
name = "Задачи_2_1_2_4_4"
path = "src/Задачи 2.1/2_4_4.rs"

[[bin]]
name = "Задачи_2_1_2_5_1"
path = "src/Задачи 2.1/2_5_1.rs"

[[bin]]
name = "Задачи_2_1_2_5_3"
path = "src/Задачи 2.1/2_5_3.rs"

[[bin]]
name = "Задачи_2_1_2_7_3"
path = "src/Задачи 2.1/2_7_3.rs"

[[bin]]
name = "Задачи_2_1_2_8_1"
path = "src/Задачи 2.1/2_8_1.rs"

[[bin]]
name = "Задачи_2_1_2_8_2"
path = "src/Задачи 2.1/2_8_2.rs"

[[bin]]
name = "Задачи_2_1_2_8_3"
path = "src/Задачи 2.1/2_8_3.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_10_3"
path = "src/Задачи/1.1 - 1.10 уровень/1_10_3.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_10_5"
path = "src/Задачи/1.1 - 1.10 уровень/1_10_5.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_4_3"
path = "src/Задачи/1.1 - 1.10 уровень/1_4_3.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_4_4"
path = "src/Задачи/1.1 - 1.10 уровень/1_4_4.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_4_5"
path = "src/Задачи/1.1 - 1.10 уровень/1_4_5.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_4_6"
path = "src/Задачи/1.1 - 1.10 уровень/1_4_6.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_4_7"
path = "src/Задачи/1.1 - 1.10 уровень/1_4_7.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_5_2"
path = "src/Задачи/1.1 - 1.10 уровень/1_5_2.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_5_3"
path = "src/Задачи/1.1 - 1.10 уровень/1_5_3.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_5_5"
path = "src/Задачи/1.1 - 1.10 уровень/1_5_5.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_5_7"
path = "src/Задачи/1.1 - 1.10 уровень/1_5_7.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_6_3"
path = "src/Задачи/1.1 - 1.10 уровень/1_6_3.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_7_4"
path = "src/Задачи/1.1 - 1.10 уровень/1_7_4.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_7_5"
path = "src/Задачи/1.1 - 1.10 уровень/1_7_5.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_8_2"
path = "src/Задачи/1.1 - 1.10 уровень/1_8_2.rs"

[[bin]]
name = "Задачи_1_1_1_10_уровень_1_9_5"
path = "src/Задачи/1.1 - 1.10 уровень/1_9_5.rs"

